<resources>
    <string name="app_name">Aqua Connect</string>
    <string name="request_service">Request Service</string>
    <string name="request_history">Request History</string>
    <string name="contacts">Contacts</string>
    <string name="welcome_back_nkevin">Welcome back,\nKevin</string>
    <string name="customer_dashboard">Customer Dashboard</string>
    <string name="_0">0</string>
    <string name="active_requests">Active Requests</string>
    <string name="count2">0</string>
    <string name="completed">Completed</string>
    <string name="start">Start</string>
    <string name="create_service_requests">Create Service Requests</string>
    <string name="service_type">Service Type</string>
    <string name="renovation">Renovation</string>
    <string name="maintenance">Maintenance</string>
    <string name="water_treatment">Water Treatment</string>
    <string name="enter_your_property_address">Enter your property address</string>
    <string name="urgency">Urgency</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="emergency">Emergency</string>
    <string name="describe_the_service_you_need">Describe the service you need...</string>
    <string name="submit_request">Submit Request</string>
    <string name="add_photo">Add photo</string>
    <string name="photos_optional">Photos(Optional)</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="welcome_dear_customer">Welcome Dear Customer!</string>
    <string name="proceed">Proceed</string>
    <string name="status_pending">Status: Pending</string>
    <string name="customer">CUSTOMER</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="create_a_new_service_request">Create a new service request</string>
    <string name="view_all_your_requests">View all your requests</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="view_notifications">View Notifications</string>
    <string name="phone">Phone:</string>
    <string name="_94_11_2861_295">+94 11 2861 295</string>
    <string name="_94_11_2861_296">+94 11 2861 296</string>
    <string name="_94_11_2862_923">+94 11 2862 923</string>
    <string name="_94_70_4030_552">+94 70 4030 552</string>
    <string name="_94_70_4085_268">+94 70 4085 268</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="_523_kotte_road_pitakotte_sri_lanka">523, \nKotte Road, \nPitakotte, \nSri Lanka</string>
    <string name="website">Website:</string>
    <string name="https_www_hydroaqua_lk">https://www.hydroaqua.lk</string>
    <string name="call_us">Call Us</string>
    <string name="_94_11_2861_295_n_94_70_4085_268">+94 11 2861 295\n+94 70 4085 268</string>
    <string name="email_support">Email Support</string>
    <string name="info_hydroaqua_lk_nit_hydroaqua_lk">info@hydroaqua.lk\nit@hydroaqua.lk</string>
    <string name="visit_us">Visit Us</string>
    <string name="_523_kotte_road_pitakotte_nsri_lanka">523, Kotte Road, Pitakotte,\nSri Lanka</string>
</resources>